releases can be found in the following locations:
 - Online Documentation: https://wiki.duraspace.org/display/DSDOC/History
 - In the Source Code Documentation at:
   [dspace-source]/dspace/docs/html/History.html

In addition, a listing of all known contributors to DSpace software can be
found online at: https://wiki.duraspace.org/display/DSPACE/DSpaceContributors

1.7.1

(Ivan Masar, Claudia Juergen)
- [DS-798] Czech localization of 1.7.0 - jspui translation Messages_cs.properties, changes in dspace-api-lang
- [DS-798] Czech localization of 1.7.0 - xmlui translation messages_cs.xml, changes in dspace-xmlui-lang

(Vladislav Zhivkov, Claudia Juergen)
- [DS-801] Bulgarian Translation for DSpace 1.7.0 - jspui translation Messages_bg.properties ind dspace-api-lang

(Claudia Juergen)
- [DS-758] Mirage theme - lists of unifished submission/workflow task wrong link in collection column

(Peter Dietz)
- [DS-789] HTTPS renders with errors due to a hardcoded HTTP link (in Mirage)

(Janne Pietarila)
- [DS-761] MetadataSchema: cache out of sync after calling delete()

(Keiji Suzuki]
- [DS-770] New Japanese messages for 1.7.0 - jspui/api translation

(Ben Bosman)
- [DS-808] jqueryUI javascript gets imported without corresponding CSS

(Ben Bosman)
- [DS-809] Support for empty dc.abstract dim field in Internet Explorer

1.7.0
=====
(Oleksandr Sytnyk)
- [DS-561] On login screen, keyboard input focus should be set to the first field (E-mail Address) so you don't have to use the mouse (JSPUI)

(Yin Yin Latt)
- [DS-588] Patch for SFX (OpenURL resolver)

(Michael B. Klein)
- [DS-699] ChoiceAuthority plugin for old-style controlled vocabularies

(Andrea Bollini)
- [DS-585] The Content Disposition configuration is ignored by unpublished items
- [DS-704] Update pdfbox library to improve performance and out-of-box support for pdf extraction